# taceo-merces-tui

./: Cargo.toml
src/: layout.rs  lib.rs  main.rs
src/pages/: dashboard.rs  intro.rs  mod.rs  wallets.rs
src/widgets/: avg_proof_time.rs  avg_tx_latency.rs  mod.rs  mpc_log.rs  network_util.rs  node_util.rs  text_input.rs  total_txs.rs  txs_log.rs  txs_per_second.rs  wallets_table.rs
