[package]
name = "taceo-merces-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
image = { version = "0.25.9", default-features = false, features = ["png"] }
ratatui = "0.30.0"
ratatui-image = { version = "10.0.2", default-features = false, features = [
  "image-defaults",
  "crossterm"
] }
tui-scrollview = "0.6.2"
ratatui-circle-gauge = { git = "https://github.com/fabian1409/ratatui-circle-gauge.git", rev = "6145870" }
